--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
     <parent>
         <groupId>org.jenkins-ci.plugins</groupId>
         <artifactId>plugin</artifactId>
-        <version>2.11</version>
+        <version>3.57</version>
         <relativePath />
     </parent>
     <properties>
         <!-- Baseline Jenkins version you use to build the plugin. Users must have this version or newer to run. -->
-        <jenkins.version>1.609.2</jenkins.version>
+        <jenkins.version>2.60.3</jenkins.version>
         <!-- Java Level to use. Java 7 required when using core >= 1.612 -->
         <java.level>8</java.level>
         <plugins.credentials.version>2.1.1</plugins.credentials.version>
@@ -16,7 +16,7 @@
         <plugins.maven-project.version>2.11</plugins.maven-project.version>
         <plugins.run-condition.version>1.0</plugins.run-condition.version>
         <plugins.junit.version>1.21</plugins.junit.version>
-        <plugins.workflow.version>1.15</plugins.workflow.version>
+        <plugins.workflow.version>2.14</plugins.workflow.version>
         <ci-sauce.version>1.142</ci-sauce.version>
         <saucerest.version>1.0.42</saucerest.version>
     </properties>
@@ -150,12 +150,12 @@
             <version>19.0</version>
         </dependency>
 
-        <dependency>
+        <!-- <dependency>
             <groupId>org.jenkins-ci.main</groupId>
             <artifactId>jenkins-test-harness</artifactId>
             <version>${project.parent.version}</version>
             <scope>test</scope>
-        </dependency>
+        </dependency> -->
         <dependency>
             <groupId>xml-apis</groupId>
             <artifactId>xml-apis</artifactId>
@@ -246,7 +246,7 @@
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
-            <version>20080701</version>
+            <version>20200518</version>
             <scope>compile</scope>
         </dependency>
 
@@ -294,11 +294,11 @@
     <repositories>
         <repository>
             <id>m.g.o-public</id>
-            <url>http://repo.jenkins-ci.org/public/</url>
+            <url>https://repo.jenkins-ci.org/public/</url>
         </repository>
         <repository>
             <id>repo.jenkins-ci.org</id>
-            <url>http://repo.jenkins-ci.org/public/</url>
+            <url>https://repo.jenkins-ci.org/public/</url>
         </repository>
         <repository>
             <id>saucelabs-repository</id>
@@ -314,7 +314,7 @@
     <pluginRepositories>
         <pluginRepository>
             <id>repo.jenkins-ci.org</id>
-            <url>http://repo.jenkins-ci.org/public/</url>
+            <url>https://repo.jenkins-ci.org/public/</url>
         </pluginRepository>
     </pluginRepositories>
     <reporting>
